--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@iconscout/react-unicons": "^2.0.2",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "luxon": "^3.5.0",
     "next": "14.2.5",
     "react": "^18",
